Few post release fixes and workarounds.

--- a/examples/integration-with-c/Makefile
+++ b/examples/integration-with-c/Makefile
@@ -1,17 +1,17 @@
 CC=zig cc
 CFLAGS=-I../../include -std=c99 -fno-sanitize=undefined -c
 
-bof_launcher: main.o bof_launcher.o bofapi.o stb_sprintf.o
-	$(CC) -o bof_launcher main.o bof_launcher.o bofapi.o stb_sprintf.o
+bof_launcher: main.o bof_launcher.o beacon_impl.o stb_sprintf.o
+	$(CC) -o bof_launcher main.o bof_launcher.o beacon_impl.o stb_sprintf.o
 
 main.o: main.c
 	$(CC) $(CFLAGS) main.c
 
-bofapi.o: ../../bof-launcher/src/bofapi/bofapi.c
-	$(CC) $(CFLAGS) ../../bof-launcher/src/bofapi/bofapi.c
+beacon_impl.o: ../../bof-launcher/src/beacon/beacon_impl.c
+	$(CC) $(CFLAGS) ../../bof-launcher/src/beacon/beacon_impl.c
 
-stb_sprintf.o: ../../bof-launcher/src/bofapi/stb_sprintf.c
-	$(CC) $(CFLAGS) ../../bof-launcher/src/bofapi/stb_sprintf.c
+stb_sprintf.o: ../../bof-launcher/src/beacon/stb_sprintf.c
+	$(CC) $(CFLAGS) ../../bof-launcher/src/beacon/stb_sprintf.c
 
 bof_launcher.o:
 	zig build-obj -O ReleaseSmall ../../bof-launcher/src/bof_launcher.zig
