--- a/examples/integration-with-c/Makefile
+++ b/examples/integration-with-c/Makefile
@@ -1,5 +1,5 @@
 CC=zig cc
-CFLAGS=-I../../include -std=c99 -fno-sanitize=undefined -c
+CFLAGS=-I../../include -I../../bof-launcher/src -std=c99 -fno-sanitize=undefined -c
 
 bof_launcher: main.o bof_launcher.o beacon_impl.o stb_sprintf.o
 	$(CC) -o bof_launcher main.o bof_launcher.o beacon_impl.o stb_sprintf.o
@@ -14,4 +14,4 @@ stb_sprintf.o: ../../bof-launcher/src/beacon/stb_sprintf.c
 	$(CC) $(CFLAGS) ../../bof-launcher/src/beacon/stb_sprintf.c
 
 bof_launcher.o:
-	zig build-obj -O ReleaseSmall -fstrip ../../bof-launcher/src/bof_launcher.zig --mod bofapi::../../include/bofapi.zig --deps bofapi
+	zig build-obj -O ReleaseSmall -fstrip ../../bof-launcher/src/bof_launcher.zig
