--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@
 !.gitignore
 !.gitattributes
 
-# Ignore some special directories
+# Ignore some special directories and files
+BOF-collection.yaml
 .zig-cache
 zig-out
 backup
